FIxed background color in dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
+    --background: var(--color-gray-700);
     --foreground: #ededed;
   }
 }
